2013-01-25  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: don't run at-exit-fg when backgrounded.
	* xstring.cc: (append(const char*,size_t)) fixed a bug;
	  (url_decode) decode plus to space.

2013-01-24  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, Torrent.cc, attach.h, bookmark.cc, history.cc,
	  lftp.cc, lftp_rl.c, misc.cc, misc.h:
	  (get_lftp_{config,data,cache}_dir) new functions; use them.
	* xdg-move: new script.
	* CmdExec.cc, CmdExec.h, lftp.cc: (cmd:at-exit-fg) new setting.

2012-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc, lftp.cc: make cmd:interactive tri-bool.

2012-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: don't show status line unless interactive.

2012-12-04  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: remove obsolete assert.

2012-12-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed coredump after trying to start a duplicate torrent.

2012-11-14  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fixed status message.
	* buffer.cc, buffer.h: limit maximum buffer size.
	* ftpclass.cc: use buffer size limit; don't Resume on several methods;
	  fixed CWD for certain paths; fixed try count resetting on uploading.

2012-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: add support for base32 btih in magnet.

2012-09-26  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: call AtFinish after parsing an empty command.

2012-09-26  Christoph Junghans <ottxor@gentoo.org>

	* module.cc: use ".bundle" for Darwin.

2012-09-26  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (ends_with) new method.

2012-09-24  Robert Story <rstory@tislabs.com>

	* Resolver.cc: fix a typo in error message and add a warning for
	  untrusted domains if dns:strict-dnssec is not set.

2012-08-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_tinfo.cc: fixed termcap coredump.
